# reporting-tool

./: .codespellrc  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .python-version  .yamllint  CI_MANAGEMENT_AUTO_DETECTION.md  CI_MANAGEMENT_INTEGRATION_COMPLETE.md  CI_MANAGEMENT_PROJECT_README.md  IMPLEMENTATION_SUMMARY.md  README.md  SETUP.md  TEST_RESULTS_FINAL.md  index.html  pyproject.toml
.github/scripts/: README.md  copy-api.sh  copy-artifacts-simple.sh  generate-index.sh  publish-reports.sh
.github/workflows/: build-test-release.yaml  build-test.yaml  codeql.yml  openssf-scorecard.yaml  performance-tracking.yaml  pre-commit.yaml  release-drafter.yaml  reporting-pr-preview.yaml  reporting-previews.yaml  reporting-production.yaml  reporting.yaml  tests.yaml
.reuse/: dep5
agl/: metadata.json  report.html  report.md
all/: metadata.json  report.html  report.md
config/: README.md  default.yaml  organizational_domains.yaml  test-project.yaml
configuration/: README.md  default.yaml  lfbroadband.yaml  onap.yaml  opendaylight.yaml
docs/: CHANGELOG_GITHUB_TOKEN_ENV.md  CI_CD_INTEGRATION.md  CI_MANAGEMENT_IMPLEMENTATION_PLAN.md  CI_MANAGEMENT_INTEGRATION.md  CI_MANAGEMENT_INTEGRATION_GUIDE.md  CI_MANAGEMENT_JENKINS_INTEGRATION.md  CI_MANAGEMENT_SUMMARY.md  CLEANUP_SUMMARY.md  CLI_CHEAT_SHEET.md  CLI_FAQ.md  CLI_GUIDE.md  CLI_QUICK_START.md  CLI_README.md  CLI_REFERENCE.md  COMMANDS.md  CONFIGURATION.md  CONFIG_WIZARD_GUIDE.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DEVELOPER_QUICK_REFERENCE.md  ERROR_HANDLING_BEST_PRACTICES.md  FAQ.md  FEATURE_DISCOVERY_GUIDE.md  GETTING_STARTED.md  GITHUB_API_CONFIGURATION.md  GITHUB_PAGES_SETUP.md  GITHUB_TOKEN_ENV.md  HTTP_FALLBACK_GUIDE.md  INDEX.md  INFO_YAML_QUICK_REF.md  INFO_YAML_REPORTING.md  INFO_YAML_SERVER_FILTERING.md  JENKINS_ALLOCATION_COMPARISON.md  JENKINS_ALLOCATION_ISSUES_ANALYSIS.md  PERFORMANCE.md  PERFORMANCE_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PYPROJECT_QUICK_REF.md  QUICK_START.md  TESTING.md  (+3 more)
docs/concurrency/: model.md  performance_tuning.md  thread_safety_audit.md  troubleshooting.md
docs/features/: GITHUB_TOKEN_ENV_VAR.md
docs/guides/: CONCURRENCY_CONFIG.md  PERFORMANCE_OPTIMIZATION.md  TEMPLATE_DEVELOPMENT.md  THEME_CREATION.md
docs/testing/: ENHANCED_ERRORS_GUIDE.md  PARALLEL_EXECUTION.md  PARALLEL_EXECUTION_QUICK_REF.md  PROPERTY_TESTING_OVERVIEW.md  TEST_PREREQUISITES.md  TEST_WRITING_GUIDE.md
examples/: README.md  dry_run_demo.py
fdio/: metadata.json  report.html  report.md
lf-broadband/: metadata.json  report.html  report.md
lfbroadband/: metadata.json  report.html  report.md
lfit/: metadata.json  report.html  report.md  report_raw.json
linux-foundation/: metadata.json  report.html  report.md  report_raw.json
o-ran-sc/: metadata.json  report.html  report.md
odl/: metadata.json  report.html  report.md
old/: metadata.json  report.html  report.md
onap/: metadata.json  report.html  report.md
opendaylight/: metadata.json  report.html  report.md
opnfv/: metadata.json  report.html  report.md
oran/: metadata.json  report.html  report.md
pr-preview/6/: index.html
previews/: index.html
previews/10/: index.html
previews/11/: index.html
previews/9/: index.html
scripts/: benchmark_baseline.py  example_full_workflow.py  profile_performance.py  test_api_stats_local.py  test_jjb_parser.py  validate_ci_management.py
src/api/: __init__.py  base_client.py  gerrit_client.py  github_client.py  jenkins_client.py
src/ci_management/: README.md  __init__.py  jjb_parser.py  repo_manager.py
src/cli/: __init__.py  arguments.py  error_context.py  error_helpers.py  errors.py  exit_codes.py  features.py  metrics.py  progress.py  validation.py  wizard.py
src/concurrency/: __init__.py  adaptive_pool.py  error_handler.py  hybrid_executor.py  jenkins_allocation.py
src/config/: README.md  __init__.py  schema.json  validator.py
src/domain/: README.md  __init__.py  author_metrics.py  info_yaml.py  organization_metrics.py  repository_metrics.py  time_window.py  workflow_status.py
src/gerrit_reporting_tool/: __init__.py  cli.py  reporter.py
src/jjb_attribution/: README.md  __init__.py  jjb_parser.py  repo_manager.py
src/observability/: README.md  __init__.py  errors.py  structured_logging.py
src/performance/: __init__.py  batch.py  cache.py  git_optimizer.py  memory.py  parallel.py  profiler.py  reporter.py
src/rendering/: __init__.py  context.py  context_builder.py  formatters.py  info_yaml_renderer.py  legacy_adapter.py  modern_renderer.py  renderer.py  template_renderer.py
src/reporting_tool/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  main.py  reporter.py  statistics.py
src/themes/: default.css
src/util/: __init__.py  formatting.py  git.py  github_org.py  zip_bundle.py
testing/: API_ACCESS.md  PROJECT_METADATA.md  README.md  TROUBLESHOOTING.md  local-testing.sh  projects.json
tests/: README.md  README.md.bak  conftest.py  test_api_statistics_integration.py  test_cli.py  test_cli_progress.py  test_cli_validation.py  test_config_validation.py  test_domain_models.py  test_enhanced_errors.py  test_error_handling.py  test_errors.py  test_git_optimizer.py  test_github_token_env.py  test_isolation.py  test_jenkins_allocation_context.py  test_legacy_adapter.py  test_parallel.py  test_performance.py  test_performance_batch.py  test_performance_cache.py  test_performance_memory.py  test_performance_reporter.py  test_rendering.py  test_retry_decorator.py  test_structured_logging.py  test_utils.py  test_utils.py.bak  test_utils.py.bak2
tests/collectors/: test_info_yaml_matcher.py  test_info_yaml_parser.py  test_info_yaml_validator_async.py
tests/config/: test-project.yaml
tests/domain/: test_info_yaml.py
tests/fixtures/: README.md  __init__.py  repositories.py
tests/integration/: README.md  conftest.py  test_api_integration.py  test_cli_integration.py  test_data_pipeline.py  test_info_yaml_end_to_end.py  test_info_yaml_reporting_integration.py  test_info_yaml_template_integration.py  test_phase13_integration.py  test_phase7_8_integration.py  (+3 more)
(+155 files in other folders)
