# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 The Linux Foundation

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "reporting-tool"
version = "1.0.0"
description = "Comprehensive multi-repository analysis tool for Linux Foundation projects"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "The Linux Foundation", email = "info@linuxfoundation.org" },
]
maintainers = [
    { name = "The Linux Foundation", email = "info@linuxfoundation.org" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed",
]
keywords = [
    "repository",
    "analysis",
    "git",
    "metrics",
    "reporting",
    "ci-cd",
    "linux-foundation",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "PyYAML>=6.0",
    "Jinja2>=3.1.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "types-PyYAML>=6.0.12.20250915",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.98.0",
    "pre-commit>=3.6.0",
    "pytest-xdist>=3.3.0",
    "pytest-timeout>=2.1.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/lf-it/reporting-tool"
Documentation = "https://reporting-tool.readthedocs.io"
Repository = "https://github.com/lf-it/reporting-tool"
Issues = "https://github.com/lf-it/reporting-tool/issues"
Changelog = "https://github.com/lf-it/reporting-tool/blob/main/CHANGELOG.md"

[project.scripts]
reporting-tool = "reporting_tool.cli:cli_main"

# Hatchling configuration
# Version is now static in [project] section above

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/config",
    "/examples",
    "/docs",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/SETUP.md",
    "/CHANGELOG.md",
    "/requirements.txt",
]
exclude = [
    "/.github",
    "/.git",
    "/__pycache__",
    "*.pyc",
    "*.pyo",
    ".pytest_cache",
    ".mypy_cache",
    ".hypothesis",
    "htmlcov",
    ".coverage*",
]

[tool.hatch.build.targets.wheel]
packages = ["src/reporting_tool"]
include = [
    "/config/**/*",
]

[tool.hatch.build.targets.wheel.shared-data]
"config" = "share/reporting-tool/config"
"examples" = "share/reporting-tool/examples"
"docs" = "share/reporting-tool/docs"

# UV configuration
[tool.uv]
dev-dependencies = [
    "types-PyYAML>=6.0.12.20250915",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.98.0",
    "pre-commit>=3.6.0",
    "pytest-xdist>=3.3.0",
    "pytest-timeout>=2.1.0",
    "pytest-asyncio>=0.21.0",
    "syrupy>=4.0.0",
]

[tool.uv.sources]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src", "."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "property: Property-based tests",
    "regression: Regression tests",
    "performance: Performance tests",
    "benchmark: Benchmark tests",
    "smoke: Smoke tests",
    "slow: Slow running tests",
    "asyncio: Asynchronous tests",
    "api: API tests",
    "flaky: Flaky tests that may fail intermittently",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true
namespace_packages = true
explicit_package_bases = true
exclude = [
    "^tests/integration/conftest\\.py$",
    "^tests/performance/conftest\\.py$",
    "^tests/fixtures/.*$",
]

[[tool.mypy.overrides]]
module = [
    "httpx.*",
    "jinja2.*",
    "yaml.*",
]
ignore_missing_imports = true

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]
extend-exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".hypothesis",
    "htmlcov",
    "dist",
    "build",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip strict parameter (Python 3.10+)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",  # unused arguments in tests are ok
    "S101", # assert use is ok in tests
]

[tool.ruff.lint.isort]
known-first-party = ["reporting_tool"]
force-single-line = false
lines-after-imports = 2

# Black configuration (if needed as fallback)
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.hypothesis
  | build
  | dist
)/
'''
